# calculator

./: CMakeLists.txt  MainFrame.cpp  MainFrame.h  MyApp.cpp  MyApp.h  README.md  main.cpp  vcpkg.json
